--- a/signup.html
+++ b/signup.html
@@ -10,7 +10,7 @@
 		<br>
 
 		<label for="lname"><b>Last Name</b></label>
-		<input type="text" placeholder="Enter Last Name" name="fname" required>
+		<input type="text" placeholder="Enter Last Name" name="lname" required>
 
 		<br>
 
